PROJECT(test_haralick)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_C_FLAGS "-std=c99")
SET(PROJECT_SOURCE_DIR source)
SET(PROJECT_BINARY_DIR bin)

ADD_SUBDIRECTORY(source)

SET(SRC ${PROJECT_SOURCE_DIR}/test_haralick.c)
ADD_EXECUTABLE(${PROJECT_BINARY_DIR}/test_haralick ${SRC})
TARGET_LINK_LIBRARIES(${PROJECT_BINARY_DIR}/test_haralick png tiff jpeg ${LIBS})

INSTALL(TARGETS ${PROJECT_BINARY_DIR}/test_haralick RUNTIME DESTINATION bin)
