PROJECT(test_haralick)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_C_FLAGS "-std=c99")
SET(PROJECT_SOURCE_DIR source)
SET(PROJECT_BINARY_DIR bin)

ADD_SUBDIRECTORY(source)

SET(SRC ${PROJECT_SOURCE_DIR}/test_haralick.c)
ADD_EXECUTABLE(${PROJECT_BINARY_DIR}/test_haralick ${SRC})

FIND_PACKAGE(TIFF)
IF(TIFF_FOUND)
  include_directories(${TIFF_INCLUDE_DIR})
  #  link_directories(${TIFF_LIBRARY})
  SET( LIBS ${LIBS} ${TIFF_LIBRARIES})
ENDIF()

FIND_PACKAGE(JPEG)
if(JPEG_FOUND)
  include_directories(${JPEG_INCLUDE_DIR})
  # link_directories(${JPEG_LIBRARY})
  SET( LIBS ${LIBS} ${JPEG_LIBRARIES})
ENDIF()

FIND_PACKAGE(PNG)
IF(PNG_FOUND)
  include_directories(${PNG_INCLUDE_DIR})
  #  link_directories(${PNG_LIBRARY})
  SET( LIBS ${LIBS} ${PNG_LIBRARIES})
ENDIF()

FIND_PACKAGE(PNG)
IF(PNG_FOUND)
  include_directories(${PNG_INCLUDE_DIR})
  # link_directories(${PNG_LIBRARY})
  SET( LIBS ${LIBS} ${PNG_LIBRARIES})
ENDIF()

MESSAGE("libraries: ${LIBS}")

TARGET_LINK_LIBRARIES(${PROJECT_BINARY_DIR}/test_haralick ${LIBS})

INSTALL(TARGETS ${PROJECT_BINARY_DIR}/test_haralick RUNTIME DESTINATION bin)
